[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pdm-vscode>=0.1.1",
    "ipykernel>=6.25.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python3 src/python_class/__init__.py"
