[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pdm-vscode>=0.1.1",
    "ipykernel>=6.25.2",
    "numpy>=1.24.4",
    "matplotlib>=3.8.0",
    "mpl-tc-fonts>=1.0.1",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python3 src/python_class/__init__part2.py"
