[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pdm-vscode>=0.1.1",
    "ipykernel>=6.25.2",
    "notebook>=7.0.6",
    "numpy>=1.24.4",
    "matplotlib>=3.8.0",
    "pandas>=2.1.1",
    "requests>=2.31.0",
    "bs4>=0.0.1",
    "selenium>=4.15.2",
    "mysql-connector-python>=8.2.0",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python3 src/python_class/__init__part2.py"
